syntax = "proto3";

package user;

option go_package = "./user";

import "google/protobuf/timestamp.proto";

// User message definition
message User {
  string id = 1;
  string email = 2;
  string name = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
  bool is_active = 6;
  bool is_deleted = 7;
}

// Authentication messages
message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
  User user = 2;
  string message = 3;
}

message LogoutRequest {
  string token = 1;
}

message LogoutResponse {
  string message = 1;
}

message RegisterRequest {
  string email = 1;
  string password = 2;
  string name = 3;
}

message RegisterResponse {
  User user = 1;
  string message = 2;
}

// User management messages
message GetProfileRequest {
  string user_id = 1;
}

message GetProfileResponse {
  User user = 1;
}

message UpdateProfileRequest {
  string user_id = 1;
  string name = 2;
  string email = 3;
}

message UpdateProfileResponse {
  User user = 1;
  string message = 2;
}

message DeleteProfileRequest {
  string user_id = 1;
}

message DeleteProfileResponse {
  string message = 1;
}

message ListUsersRequest {
  int32 page = 1;
  int32 page_size = 2;
  string name_filter = 3;
  string email_filter = 4;
}

message ListUsersResponse {
  repeated User users = 1;
  int32 total_count = 2;
  int32 page = 3;
  int32 page_size = 4;
}

// Password change
message ChangePasswordRequest {
  string user_id = 1;
  string current_password = 2;
  string new_password = 3;
}

message ChangePasswordResponse {
  string message = 1;
}

// Services
service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Logout(LogoutRequest) returns (LogoutResponse);
  rpc Register(RegisterRequest) returns (RegisterResponse);
}

service UserService {
  rpc GetProfile(GetProfileRequest) returns (GetProfileResponse);
  rpc UpdateProfile(UpdateProfileRequest) returns (UpdateProfileResponse);
  rpc DeleteProfile(DeleteProfileRequest) returns (DeleteProfileResponse);
  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);
  rpc ChangePassword(ChangePasswordRequest) returns (ChangePasswordResponse);
}